# CH32V003-CMake-Template

./: .gitignore  CMakeLists.txt  README.md
Ld/: Link.ld
Peripheral/inc/: ch32v00x.h
User/inc/: ch32v00x_conf.h
User/src/: ch32v00x_it.c  main.c  syscalls.c  system_ch32v00x.c
